--- a/ADictionaryBravo/app/src/main/res/layout/activity_main.xml
+++ b/ADictionaryBravo/app/src/main/res/layout/activity_main.xml
@@ -1,48 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  tools:context=".MainActivity">
-
-  <TextView
-    android:id="@+id/title"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:padding="20dp"
-    android:text="@string/search_in_wikipedia" />
-
-  <EditText
-    android:id="@+id/textField1"
-    android:layout_below="@id/title"
-    android:padding="20dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
-
-  <Button
-    android:id="@+id/goButton"
-    android:layout_below="@id/textField1"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="20dp"
-    android:text="@string/go" />
-
-  <ScrollView
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_alignParentStart="true"
-    android:layout_below="@+id/goButton">
+    tools:context=".MainActivity">
 
-    <LinearLayout
+  <TextView
+      android:id="@+id/title"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:padding="20dp"
+      android:text="@string/search_in_wikipedia" />
+
+  <EditText
+      android:id="@+id/textField1"
+      android:layout_below="@id/title"
+      android:padding="20dp"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content" />
+
+  <Button
+      android:id="@+id/goButton"
+      android:layout_below="@id/textField1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:orientation="vertical" >
-      <TextView
-        android:id="@+id/textPane1"
+      android:padding="20dp"
+      android:text="@string/go" />
+
+  <ScrollView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_alignParentStart="true"
+      android:layout_below="@+id/goButton">
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="20dp" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+      <TextView
+          android:id="@+id/textPane1"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:padding="20dp" />
     </LinearLayout>
   </ScrollView>
+
+  <ProgressBar
+      android:id="@+id/progressBar"
+      style="?android:attr/progressBarStyle"
+      android:layout_width="34dp"
+      android:layout_height="wrap_content"
+      android:visibility="gone"
+      android:layout_alignBottom="@+id/title"
+      android:layout_alignParentEnd="true"
+      android:layout_marginEnd="23dp" />
 
 </RelativeLayout>
